Changes for 2.1.0:

- Update pom for CODAC 7.3

Changes for 2.0.0:

- Project renamed from sequencer-plugin-mathexpr to oac-tree-plugin-mathexpr

Changes for v1.5.0:

- Adapt to sequencer v3.3
- Changed C++ standard to C++17

Changes for v1.4.0:

- Adapt to sequencer v3.2

Changes for v1.3.0:

- Improve documentation
- Update cmake configuration

Changes for v1.2.0:

- New implementation based on sup-dto and sup-mathexpr

Changes for v1.1.0:

- Updated to use the external library for math expressions