@@ -5,6 +5,7 @@
 include(GNUInstallDirs)
 include(CTest)
 include(COASetupCodacEnvironment)
+include(FetchGithubDeps)
 
 # -----------------------------------------------------------------------------
 # C++ version
@@ -32,11 +33,11 @@ endif()
 message(DEBUG "PLUGIN_PATH: ${PLUGIN_PATH}")
 
 if (NOT DEFINED PLUGIN_RUNTIME_DIRECTORY)
-  set(PLUGIN_RUNTIME_DIRECTORY ${CMAKE_BINARY_DIR}/${PLUGIN_PATH})
+  set(PLUGIN_RUNTIME_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${PLUGIN_PATH})
 endif()
 
 if (NOT DEFINED TEST_OUTPUT_DIRECTORY)
-  set(TEST_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test_bin)
+  set(TEST_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_bin)
 endif()
 
 file(MAKE_DIRECTORY ${PLUGIN_RUNTIME_DIRECTORY})
