@@ -1,5 +1,6 @@
 Changes for 2.1.0:
 
+- Fetch dependencies option in cmake
 - Update pom for CODAC 7.3
 
 Changes for 2.0.0:
